--- a/static/faq.html
+++ b/static/faq.html
@@ -4,113 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>FAQ - DoggyGallery</title>
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-
-            body {
-                font-family:
-                    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-                    Oxygen, Ubuntu, sans-serif;
-                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                min-height: 100vh;
-                padding-bottom: 40px;
-            }
-
-            .content {
-                max-width: 900px;
-                margin: 40px auto;
-                background: white;
-                border-radius: 16px;
-                padding: 40px;
-                box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            }
-
-            h1 {
-                color: #333;
-                margin-bottom: 30px;
-            }
-
-            .back-link {
-                display: inline-block;
-                margin-bottom: 20px;
-                color: #667eea;
-                text-decoration: none;
-                font-weight: 600;
-            }
-
-            .back-link:hover {
-                text-decoration: underline;
-            }
-
-            .faq-section {
-                margin-bottom: 30px;
-            }
-
-            .faq-question {
-                font-weight: bold;
-                color: #667eea;
-                font-size: 1.2em;
-                margin-bottom: 10px;
-                margin-top: 25px;
-            }
-
-            .faq-answer {
-                color: #555;
-                line-height: 1.6;
-                margin-bottom: 15px;
-            }
-
-            code {
-                background: #f4f4f4;
-                padding: 2px 6px;
-                border-radius: 3px;
-                font-family: monospace;
-                color: #667eea;
-            }
-
-            .highlight-box {
-                background: #f0fdf4;
-                border-left: 4px solid #10b981;
-                padding: 15px;
-                margin: 15px 0;
-                border-radius: 4px;
-            }
-
-            .warning-box {
-                background: #fef3c7;
-                border-left: 4px solid #f59e0b;
-                padding: 15px;
-                margin: 15px 0;
-                border-radius: 4px;
-            }
-
-            .info-box {
-                background: #e0e7ff;
-                border-left: 4px solid #667eea;
-                padding: 15px;
-                margin: 15px 0;
-                border-radius: 4px;
-            }
-
-            ul {
-                margin-left: 20px;
-                margin-bottom: 15px;
-            }
-
-            li {
-                margin-bottom: 8px;
-                color: #555;
-            }
-        </style>
+        <link rel="stylesheet" href="/static/css/main.css" />
     </head>
     <body>
         <div class="content">
             <a href="/" class="back-link">← Back to Gallery</a>
-            <h1>🐕🖼️✨🔒 DoggyGallery FAQ</h1>
+            <h1>
+                <span>🐕🖼️✨🔒 DoggyGallery FAQ</span>
+                <div style="display: flex; gap: 8px;">
+                    <a href="/static/filter.html" class="nav-link">🔍 Filter</a>
+                    <a href="/docs" class="nav-link">📚 API</a>
+                </div>
+            </h1>
 
             <div class="faq-section">
                 <div class="faq-question">
