--- a/static/filter.html
+++ b/static/filter.html
@@ -4,261 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Filter - DoggyGallery</title>
+        <link rel="stylesheet" href="/static/css/main.css" />
         <link rel="stylesheet" href="/static/css/lightbox.css" />
-        <style>
-            * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-
-            body {
-                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                min-height: 100vh;
-                padding: 20px;
-            }
-
-            .container {
-                max-width: 1400px;
-                margin: 0 auto;
-            }
-
-            header {
-                background: white;
-                border-radius: 12px;
-                padding: 24px;
-                margin-bottom: 24px;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            }
-
-            h1 {
-                color: #333;
-                font-size: 28px;
-                margin-bottom: 8px;
-            }
-
-            .back-link {
-                display: inline-block;
-                margin-top: 12px;
-                color: #667eea;
-                text-decoration: none;
-                font-weight: 600;
-            }
-
-            .back-link:hover {
-                text-decoration: underline;
-            }
-
-            .filter-panel {
-                background: white;
-                border-radius: 12px;
-                padding: 24px;
-                margin-bottom: 24px;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            }
-
-            .filter-row {
-                display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-                gap: 16px;
-                margin-bottom: 16px;
-            }
-
-            .filter-group {
-                display: flex;
-                flex-direction: column;
-            }
-
-            label {
-                font-weight: 600;
-                color: #333;
-                margin-bottom: 8px;
-                font-size: 14px;
-            }
-
-            input[type="text"],
-            select {
-                padding: 10px;
-                border: 2px solid #e0e0e0;
-                border-radius: 6px;
-                font-size: 14px;
-                transition: border-color 0.2s;
-            }
-
-            input[type="text"]:focus,
-            select:focus {
-                outline: none;
-                border-color: #667eea;
-            }
-
-            .btn {
-                background: #667eea;
-                color: white;
-                padding: 12px 24px;
-                border: none;
-                border-radius: 6px;
-                font-size: 14px;
-                font-weight: 600;
-                cursor: pointer;
-                transition: background 0.2s;
-            }
-
-            .btn:hover {
-                background: #5568d3;
-            }
-
-            .btn-secondary {
-                background: #9ca3af;
-            }
-
-            .btn-secondary:hover {
-                background: #6b7280;
-            }
-
-            .results-header {
-                background: white;
-                border-radius: 12px;
-                padding: 16px 24px;
-                margin-bottom: 16px;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-
-            .results-count {
-                font-weight: 600;
-                color: #333;
-            }
-
-            .results-grid {
-                display: grid;
-                grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-                gap: 20px;
-            }
-
-            .result-item {
-                background: white;
-                border-radius: 12px;
-                overflow: hidden;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-                transition: transform 0.2s, box-shadow 0.2s;
-                cursor: pointer;
-            }
-
-            .result-item:hover {
-                transform: translateY(-4px);
-                box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
-            }
-
-            .result-icon {
-                width: 100%;
-                height: 200px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 72px;
-                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                color: white;
-            }
-
-            .result-icon.image {
-                background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            }
-
-            .result-icon.video {
-                background: linear-gradient(135deg, #f59e0b 0%, #f97316 100%);
-            }
-
-            .result-icon.audio {
-                background: linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);
-            }
-
-            .result-info {
-                padding: 16px;
-            }
-
-            .result-name {
-                font-weight: 600;
-                color: #333;
-                margin-bottom: 4px;
-                word-break: break-word;
-            }
-
-            .result-path {
-                font-size: 12px;
-                color: #666;
-                margin-bottom: 8px;
-                word-break: break-word;
-            }
-
-            .result-meta {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                margin-top: 12px;
-            }
-
-            .result-size {
-                font-size: 12px;
-                color: #999;
-            }
-
-            .result-type {
-                display: inline-block;
-                background: #667eea;
-                color: white;
-                padding: 2px 8px;
-                border-radius: 4px;
-                font-size: 11px;
-                text-transform: uppercase;
-            }
-
-            .result-type.video {
-                background: #f59e0b;
-            }
-
-            .result-type.audio {
-                background: #8b5cf6;
-            }
-
-            .empty-state {
-                background: white;
-                border-radius: 12px;
-                padding: 48px;
-                text-align: center;
-                color: #999;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            }
-
-            .loading {
-                text-align: center;
-                color: white;
-                font-size: 18px;
-                margin-top: 48px;
-            }
-
-            @media (max-width: 768px) {
-                .filter-row {
-                    grid-template-columns: 1fr;
-                }
-
-                .results-grid {
-                    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-                    gap: 12px;
-                }
-
-                h1 {
-                    font-size: 22px;
-                }
-            }
-        </style>
     </head>
     <body>
         <div class="container">
             <header>
-                <h1>🔍 Filter Gallery</h1>
+                <h1>
+                    <span>🔍 Filter Gallery</span>
+                    <div style="display: flex; gap: 8px;">
+                        <a href="/static/faq.html" class="nav-link">FAQ</a>
+                        <a href="/docs" class="nav-link">📚 API</a>
+                    </div>
+                </h1>
                 <a href="/" class="back-link">← Back to Gallery</a>
             </header>
 
