make port more doggy-like

--- a/static/faq.html
+++ b/static/faq.html
@@ -28,6 +28,12 @@
                         images and videos over HTTPS. It's designed with security as the top
                         priority, enforcing modern encryption standards and authentication.
                     </p>
+                    <div class="highlight-box">
+                        <strong>📦 Open Source on GitHub:</strong>
+                        <a href="https://github.com/meltingscales/DoggyGallery" target="_blank" rel="noopener noreferrer" style="color: var(--text-link); font-weight: 600;">
+                            github.com/meltingscales/DoggyGallery
+                        </a>
+                    </div>
                 </div>
 
                 <div class="faq-question">
@@ -416,7 +422,7 @@ cargo build --release
     --username admin \
     --password "your-secure-password" \
     --host 0.0.0.0 \
-    --port 8443
+    --port 7833
 
 # Run with custom certificates (production)
 ./target/release/doggygallery \
@@ -483,7 +489,10 @@ cargo build --release
                             <strong>DO NOT</strong> open a public GitHub issue
                         </li>
                         <li>
-                            Report privately through GitHub's security advisory system
+                            Report privately through
+                            <a href="https://github.com/meltingscales/DoggyGallery/security/advisories" target="_blank" rel="noopener noreferrer" style="color: var(--text-link); font-weight: 600;">
+                                GitHub's security advisory system
+                            </a>
                         </li>
                         <li>
                             Or contact the maintainers directly via email
