--- a/static/faq.html
+++ b/static/faq.html
@@ -29,10 +29,28 @@
                         priority, enforcing modern encryption standards and authentication.
                     </p>
                     <div class="highlight-box">
-                        <strong>📦 Open Source on GitHub:</strong>
-                        <a href="https://github.com/meltingscales/DoggyGallery" target="_blank" rel="noopener noreferrer" style="color: var(--text-link); font-weight: 600;">
-                            github.com/meltingscales/DoggyGallery
-                        </a>
+                        <strong>📦 Installation & Resources:</strong>
+                        <ul style="margin-top: 8px; margin-bottom: 0;">
+                            <li>
+                                <strong>crates.io:</strong>
+                                <a href="https://crates.io/crates/doggygallery" target="_blank" rel="noopener noreferrer" style="color: var(--text-link); font-weight: 600;">
+                                    crates.io/crates/doggygallery
+                                </a>
+                                (install with <code>cargo install doggygallery</code>)
+                            </li>
+                            <li>
+                                <strong>GitHub:</strong>
+                                <a href="https://github.com/meltingscales/DoggyGallery" target="_blank" rel="noopener noreferrer" style="color: var(--text-link); font-weight: 600;">
+                                    github.com/meltingscales/DoggyGallery
+                                </a>
+                            </li>
+                            <li>
+                                <strong>Documentation:</strong>
+                                <a href="https://docs.rs/doggygallery" target="_blank" rel="noopener noreferrer" style="color: var(--text-link); font-weight: 600;">
+                                    docs.rs/doggygallery
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
